# tauri-plugin-centrifugo

./: .gitignore  .versionrc.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml
examples/server/: README.md  centrifugo.json  package.json  pnpm-lock.yaml  tsconfig.json
examples/server/proto/: api.ts
examples/server/src/: info-sender.ts
examples/tauri-app/: package.json  pnpm-lock.yaml  vite.config.js
examples/tauri-app/src/: App.svelte  main.ts
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: add_subscription.toml  get_subscriptions.toml  history.toml  presence.toml  presence_stats.toml  publish.toml  refresh.toml  remove_subscription.toml  rpc.toml  set_token.toml  stop_connection.toml  sub_refresh.toml
permissions/schemas/: schema.json
src/: commands.rs  core.rs  error.rs  lib.rs  models.rs
