[package]
name = "tauri-plugin-centrifugo"
version = "0.1.0"
authors = [ "You" ]
description = "Tauri plugin for Centrifugo real-time communication using tokio-centrifuge"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/node_modules"]
links = "tauri-plugin-centrifugo"

[dependencies]
tauri = { version = "2.6.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio-centrifuge = "0.1"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

[build-dependencies]
tauri-plugin = { version = "2.3.0", features = ["build"] }
